@@ -581,6 +581,54 @@ function fp_get_machine_readable($str) {
  
 /////////////////////////////////////////////////////////////////////
 
+/**
+ * Return back an assoc array of our set degree classifications, separated by "level"
+ */
+function fp_get_degree_classifications() {
+  $rtn = array();
+  
+  // Level 1
+  $temp = explode("\n", variable_get("degree_classifications_level_1", "MAJOR ~ Major"));
+  foreach ($temp as $line) {
+    $temp2 = explode("~", $line);
+    $machine_name = trim($temp2[0]);
+    $title = trim($temp2[1]);
+    if ($machine_name != "") {
+      $rtn["levels"][1][$machine_name] = $title;
+      $rtn["machine_names"][$machine_name] = $title;
+    }
+  }
+  
+  // Level 2
+  $temp = explode("\n", variable_get("degree_classifications_level_2", "MINOR ~ Minor"));
+  foreach ($temp as $line) {
+    $temp2 = explode("~", $line);
+    $machine_name = trim($temp2[0]);
+    $title = trim($temp2[1]);
+    if ($machine_name != "") {
+      $rtn["levels"][2][$machine_name] = $title;
+      $rtn["machine_names"][$machine_name] = $title;
+    }
+  }
+  
+  
+  // Level 3
+  $temp = explode("\n", variable_get("degree_classifications_level_3", "CONC ~ Concentration"));
+  foreach ($temp as $line) {
+    $temp2 = explode("~", $line);
+    $machine_name = trim($temp2[0]);
+    $title = trim($temp2[1]);
+    if ($machine_name != "") {
+      $rtn["levels"][3][$machine_name] = $title;
+      $rtn["machine_names"][$machine_name] = $title;
+    }
+  }
+  
+  
+  
+  return $rtn;
+}
+
 
 
 /**
